# test

./: .gitignore  Applied.ipynb  BigDataLab1.ipynb  BigDataLab2.ipynb  BigDatalab3.ipynb  bigdata08.10.25.ipynb  dask_tutorial.ipynb  pyproject.toml
