[project]
name = "bigdata"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dask[complete]>=2025.9.1",
    "geopandas>=1.1.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "pooch>=1.8.2",
    "scipy>=1.16.2",
    "shapely>=2.1.2",
    "xarray>=2025.9.1",
    "zarr>=3.1.3",
]
